fix popup menu on mobile screen

--- a/src/App.css
+++ b/src/App.css
@@ -225,23 +225,42 @@ header {
 
 .menu {
     display: none;
-    gap: 1rem;
+    box-sizing: border-box;
+    z-index: 1;
+    gap: 7vw;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 5rem;
+    right: 0;
+    padding: 8vw 5vw;
+    width: 50vw;
+    background-color: white;
+    border-radius: 5vw;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
+
+    .menu_divider {
+        width: 7vw;
+        height: .3vw;
+        background-color: #91e523;
+    }
 
     .menu_link {
+        text-align: center;
+        font-size: 4vw;
+        font-weight: 500;
         text-decoration: none;
         color: #707070;
     }
+    .menu_link:focus {
+        font-weight: 700;
+        color: #FF55FB;
+    }
+
 }
 
 .opened {
     display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 5rem;
-    right: 0;
-    background-color: #f8f9fa;
-    padding: 1rem;
-    border-radius: 10px;
 }
 
 main {
